Details UI added

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,39 +1,3 @@
-<div class="ui container">
-  <div class="ui stackable grid">
-    <div class="three wide column">
-      <div class="ui vertical menu">
-        <div class="item">
-          <div class="ui input">
-            <input
-              type="text"
-              placeholder="Search..."
-              name="searchInput"
-              #searchInput
-              (change)="onSearch($event)"
-            />
-          </div>
-        </div>
-
-        <div class="ui dropdown item">
-          Genre
-          <i class="dropdown icon"></i>
-          <div class="menu">
-            <a class="item"><i class="edit icon"></i> Edit Profile</a>
-            <a class="item"><i class="globe icon"></i> Choose Language</a>
-            <a class="item"><i class="settings icon"></i> Account Settings</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="nine wide column">
-      <div class="ui link cards">
-        <app-movie
-          *ngFor="let movie of moviesToShow"
-          [title]="movie.title"
-          [image]="movie.image"
-          [yearOfProduction]="movie.yearOfProduction"
-        ></app-movie>
-      </div>
-    </div>
-  </div>
-</div>
+<app-menu></app-menu>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
